--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/blobs": "^10.1.0",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-basic-auth": "^1.2.1",
