Fix: Convert functions to CommonJS to resolve module conflict

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,10 @@
   publish = "public"
   functions = "netlify/functions"
 
-# ADD THIS NEW SECTION
 [functions]
   included_files = ["data/**"]
+  node_bundler = "esbuild"
+  node_version = "18"
 
 [[redirects]]
   from = "/api/*"
