Fix: Convert seed-data function to CommonJS

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   publish = "public"
+  # This line MUST correctly point to your functions folder.
   functions = "netlify/functions"
 
 [functions]
