--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "proposal",
+"name": "ihavecpu-pattaya-webapp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
